# pyllm

./: .dockerignore  .gitignore  01_python.md  02_llm.md  03_database.md  04_api.md  README.md  pyllm.md  python-uv.md  transcript.md
01/: pyproject.toml
01/python-basic/: 01_variables_types.py  02_strings_formatting.py  03_collections_list_tuple_set_dict.py  04_conditions_loops.py  05_functions_scope.py  06_comprehensions.py  07_classes_dataclasses.py  08_exceptions.py  09_file_io_pathlib.py  10_modules_imports.py  11_iterators_generators.py  12_typing_optional.py  13_input_cli.py  14_api_urllib.py  15_mini_calculator.py  16_api_requests.py  FileIoPathlib09.java
02/: 02_jupyter.md
03/: crud.py  docker-compose.yml  pyproject.toml
04/: 04_pandas_advanced.md  main.py  pyproject.toml
05/: 05_timeseries.md  main.py  pyproject.toml
06/: 06_data_cleaning.md  main.py  pyproject.toml
07/: 07_visualization.md  main.py  pyproject.toml
08/: 08_interactive_dashboard.md  main.py  pyproject.toml
09/: 09_machine_learning.md  main.py  pyproject.toml
10/: 10_deep_learning.md  main.py  pyproject.toml
11/: 11_database_advanced.md  main.py  pyproject.toml
12/: 12_web_scraping_api.md  main.py  pyproject.toml
13/: 13_cloud_deployment.md  main.py  pyproject.toml
14/: 14_large_scale_data.md  main.py  pyproject.toml
