[project]
name = "data-visualization"
version = "0.1.0"
description = "데이터 시각화 마스터 (Matplotlib/Seaborn)"
dependencies = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
