[project]
name = "interactive-dashboard"
version = "0.1.0"
description = "인터랙티브 시각화 (Plotly)와 대시보드"
dependencies = [
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "dash-bootstrap-components>=1.5.0",
    "flask-caching>=2.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
