[project]
name = "machine-learning-intro"
version = "0.1.0"
description = "머신러닝 입문 (Scikit-learn)"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
