[project]
name = "deep-learning-fundamentals"
version = "0.1.0"
description = "딥러닝 기초 (TensorFlow/PyTorch)"
dependencies = [
    "tensorflow>=2.15.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0"
]
