[project]
name = "database-advanced"
version = "0.1.0"
description = "데이터베이스 연동 심화 - SQL 고급, NoSQL"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.2.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "clickhouse-driver>=0.2.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0"
]
