[project]
name = "web-scraping-api"
version = "0.1.0"
description = "웹 스크래핑과 API 활용"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "scrapy>=2.11.0",
    "selenium>=4.15.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "schedule>=1.2.0",
    "backoff>=2.2.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
