[project]
name = "large-scale-data-processing"
version = "0.1.0"
description = "대규모 데이터 처리 - Dask, Spark"
dependencies = [
    "dask>=2023.12.0",
    "distributed>=2023.12.0",
    "dask-ml>=2023.12.0",
    "pyspark>=3.5.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.10.0",
    "hdfs3>=0.3.1",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "ray>=2.8.0",
    "modin>=0.24.0",
    "vaex>=4.16.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0"
]
